<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/center_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/username"
                android:textColor="#F6F4F4"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/center_register"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/userid"
                android:textColor="#F4F1F1"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/userimage"
            app:srcCompat="@drawable/center" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    app:srcCompat="@drawable/wordbook" />

                <TextView
                    android:id="@+id/word_book"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:text="@string/wordbook"
                    android:textColor="#0C0C0C"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    app:srcCompat="@drawable/arrow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    app:srcCompat="@drawable/lexicon" />

                <TextView
                    android:id="@+id/lexicon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:text="@string/lexicon"
                    android:textColor="#070707"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    app:srcCompat="@drawable/arrow" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#0E0F10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    app:srcCompat="@drawable/option" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/option"
                    android:textColor="#0B0A0A"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    app:srcCompat="@drawable/arrow" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>