<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            app:srcCompat="@drawable/left_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="需新学"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/new_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="需复习"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#BAC2EC"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recite_word"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recite_phonetic"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:gravity="center" />

            <ImageView
                android:id="@+id/recite_pronounce"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:contentDescription="@string/recite"
                app:srcCompat="@drawable/pronounce" />

            <CheckBox
                android:id="@+id/recite_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:button="@drawable/collect" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#BAC2EC"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recite_meaing"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E1DCDC"
                android:text="例句" />

            <TextView
                android:id="@+id/recite_example"
                android:layout_width="match_parent"
                android:layout_height="280dp" />
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/realize"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/colorAccent"
            android:text="@string/realize" />

        <Button
            android:id="@+id/uncertain"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/uncertain" />

        <Button
            android:id="@+id/unfamiliarity"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/unfamiliarity" />
    </LinearLayout>

</LinearLayout>